Added bootstrap and jquery

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,8 +1,14 @@
 <html>
-    <head>
-    <title>Welcome to Mochi</title>
-    </head>
-    <body>
-    <h1>Hello mochi</h1>
-    </body>
+<head>
+<link rel="stylesheet" href="bootstrap-4.0.0-beta/css/bootstrap.min.css"
+	crossorigin="anonymous">
+<script src="bootstrap-4.0.0-beta/js/bootstrap.min.js"
+	crossorigin="anonymous"></script>
+<script src="jquery/jquery-3.2.1.slim.min.js" crossorigin="anonymous"></script>
+
+<title>Welcome to Mochi</title>
+</head>
+<body>
+	<h1>Hello mochi</h1>
+</body>
 </html>
