--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -9,6 +9,8 @@
 <title>Welcome to Mochi</title>
 </head>
 <body>
-	<h1>Hello mochi</h1>
+	<div class="container">
+		<h1>Welcome to mochi-db</h1>
+	</div>
 </body>
 </html>
